--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Title of the document</title>
-  </head>
-  <body>
-      
-        <img src="./media/JonRobinheadshot (1).jpg" width="30%" height="30%" style="border: none;"></img>
-        <img src="./media/fullbody1.jpg" width="30%" height="30%" style="border: none;"></img>
-        <div>
-            <img src="./media/JonRobinResume (1).jpg" width="30%" height="30%" style="border: none;"></img>
-            <a download="./media/JonRobinResume.pdf/">DOWNLOAD RESUME</a>
-        </div>
-  </body>
+
+<head>
+    <title>Jon Robin</title>
+    <link rel="stylesheet" href="index.css">
+    <!--This Site was created by Matthew Robin mattrobin.me and github.com/mrobin88 -->
+</head>
+
+<body>
+
+    <h1 style="text-align-last: center;">Jon Robin</h1>
+    <div class="headshot">
+        <img src="./media/JonRobinheadshot.jpg" alt="A Headshot of Jon Robin" width="50%" style="border: none;"></img>
+        <p>photo: Ted Ely</p>
+    </div>
+    <div class="fullbody">
+        <img src="./media/fullbody.jpg" alt="A Full Body Photo of Jon Robin" width="50%" style="border: none; "></img>
+        <p>photo: Ted Ely</p>
+    </div>
+    <div class="resume">
+        <img src="./media/JonRobinResume.jpg" alt="Jon Robin's Resume">
+    </div>
+</body>
+
 </html>
