--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="fullbody">
         <img src="./media/fullbody.jpg" alt="A Full Body Photo of Jon Robin" width="50%" style="border: none; "></img>
-        <p>photo: Ted Ely</p>
+        <p>photo: Jorg Meyer</p>
     </div>
     <div class="resume">
         <img src="./media/JonRobinResume.jpg" alt="Jon Robin's Resume">
