add resume updated file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>photo: Jorg Meyer</p>
     </div>
     <div class="resume">
-        <img src="./media/JonRobinResume.jpg" alt="Jon Robin's Resume">
+        <img src="./media/JonRobinResume2.jpg" alt="Jon Robin's Resume">
     </div>
 </body>
 
