--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <link rel="stylesheet" href="index.css">
     <!--This Site was created by Matthew Robin mattrobin.me and github.com/mrobin88 -->
 </head>
-
 <body>
-
-    <h1 style="text-align-last: center;">Jon Robin</h1>
+    <h1 style="text-align: -webkit-center; ">Jon Robin</h1>
     <div class="headshot">
-        <img src="./media/JonRobinheadshot.jpg" alt="A Headshot of Jon Robin" width="50%" style="border: none;"></img>
+        <img src="./media/JonRobinheadshot.jpg" alt="A Headshot of Jon Robin" width="40%" style="border: none;"></img>
         <p>photo: Ted Ely</p>
     </div>
     <div class="fullbody">
-        <img src="./media/fullbody.jpg" alt="A Full Body Photo of Jon Robin" width="50%" style="border: none; "></img>
+        <img src="./media/fullbody.jpg" alt="A Full Body Photo of Jon Robin" width="40%" style="border: none; "></img>
         <p>photo: Jorg Meyer</p>
     </div>
     <div class="resume">
-        <img src="./media/JonRobinResume2.jpg" alt="Jon Robin's Resume">
+        <img src="./media/JonRobinResume2.jpg" alt="Jon Robin's Resume" width="40%" style="border: none;">
+    </div>
+    <div>
+        <iframe src="https://player.vimeo.com/video/419332055" width="640" height="360" frameborder="0"
+            allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 </body>
 
