bg color change add media query for resize to 100% on device width < 740px and google font to title

--- a/index.html
+++ b/index.html
@@ -4,25 +4,35 @@
 <head>
     <title>Jon Robin</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <!--This Site was created by Matthew Robin mattrobin.me and github.com/mrobin88 -->
 </head>
 <body>
-    <h1 style="text-align: -webkit-center; ">Jon Robin</h1>
+    <h1 style="text-align: -webkit-center; font-family: Cinzel" >Jon Robin</h1>
     <div class="headshot">
-        <img src="./media/JonRobinheadshot.jpg" alt="A Headshot of Jon Robin" width="40%" style="border: none;"></img>
-        <p>photo: Ted Ely</p>
+        <img src="./media/JonRobinheadshot.jpg" alt="A Headshot of Jon Robin"  width="50%" style="border: none; text-align: -webkit-center;"></img>
     </div>
     <div class="fullbody">
-        <img src="./media/fullbody.jpg" alt="A Full Body Photo of Jon Robin" width="40%" style="border: none; "></img>
-        <p>photo: Jorg Meyer</p>
+        <img src="./media/fullbody.jpg" alt="A Full Body Photo of Jon Robin" width="50%" style="border: none; "></img>
     </div>
     <div class="resume">
         <img src="./media/JonRobinResume2.jpg" alt="Jon Robin's Resume" width="100%" style="border: none;">
     </div>
     <div>
         <iframe src="https://player.vimeo.com/video/419332055" width="640" height="360" frameborder="0"
-            allow="autoplay; fullscreen" allowfullscreen></iframe>
+        allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
+    <footer>
+        <ul>
+        <li>
+            <p>photos: Ted Ely and Jorg Meyer</p>
+        </li>
+        <li>
+            <p style="text-align-last: ; font-family: -apple-system">website: Matt Robin </p>
+        </li>
+    </ul>
+    </footer>
+    
 </body>
 
 </html>
