update video content

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <img src="./media/JonRobinResume2.jpg" alt="Jon Robin's Resume" width="100%" style="border: none;">
     </div>
     <div>
-        <iframe src="https://vimeo.com/513162768" width="640" height="360" frameborder="0"
-        allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/513163407?title=0&byline=0&portrait=0" width="640" height="320" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div>
-        <iframe src="https://vimeo.com/513163407" width="640" height="360" frameborder="0"
-        allow="autoplay; fullscreen" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/513163407" width="640" height="320" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/513163407">The Seduction Community</a> from <a href="https://vimeo.com/user56086723">Jon Robin</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
     </div>
     <footer>
         <ul>
