--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <iframe src="https://player.vimeo.com/video/513163407?title=0&byline=0&portrait=0" width="640" height="320" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div>
-<iframe src="https://player.vimeo.com/video/513163407" width="640" height="320" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/513163407">The Seduction Community</a> from <a href="https://vimeo.com/user56086723">Jon Robin</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <iframe src="https://player.vimeo.com/video/513163407?title=0&byline=0&portrait=0" width="640" height="320" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
     <footer>
         <ul>
@@ -31,7 +30,7 @@
             <p>photos: Ted Ely and Jorg Meyer</p>
         </li>
         <li>
-            <p style="text-align-last: ; font-family: -apple-system">website: Matt Robin </p>
+            <p style="text-align-last:; font-family: -apple-system">website: Matt Robin </p>
         </li>
     </ul>
     </footer>
